cmake_minimum_required(VERSION 3.31)
project(online_class)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(1intro_binary_search)
add_subdirectory(2array)
add_subdirectory(3linked_list)
add_subdirectory(4recursion)
add_subdirectory(5queue)
add_subdirectory(6stack)
add_subdirectory(7heap)
add_subdirectory(8tree)
add_subdirectory(9hash)