cmake_minimum_required(VERSION 3.31)
project(online_class)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(01intro_binary_search)
add_subdirectory(02array)
add_subdirectory(03linked_list)
add_subdirectory(04recursion)
add_subdirectory(05queue)
add_subdirectory(06stack)
add_subdirectory(07heap)
add_subdirectory(08tree)
add_subdirectory(09hash)
add_subdirectory(10sort)
add_subdirectory(11graph)
add_subdirectory(12disjoint_set)