add_executable(1singly_linked_list 1singly_linked_list.cpp)
add_executable(2singly_linked_list_with_sentinel 2singly_linked_list_with_sentinel.cpp)
add_executable(3doubly_linked_list_with_sentinel 3doubly_linked_list_with_sentinel.cpp)
add_executable(4doubly_circular_linked_list_with_sentinel 4doubly_circular_linked_list_with_sentinel.cpp)