add_executable(1factorial 1factorial.cpp)
add_executable(2string_reverse 2string_reverse.cpp)
add_executable(3binary_search 3binary_search.cpp)
add_executable(4bubble_sort 4bubble_sort.cpp)
add_executable(5insertion_sort 5insertion_sort.cpp)
add_executable(6fibonacci 6fibonacci.cpp)
add_executable(7summary 7summary.cpp)
add_executable(8tower_of_hanoi 8tower_of_hanoi.cpp)
add_executable(9pascal_triangle 9pascal_triangle.cpp)